--- a/klmrposter.sty
+++ b/klmrposter.sty
@@ -13,6 +13,7 @@
 \usepackage{polyglossia}
 \usepackage{blindtext}
 \usepackage{microtype}
+\usepackage{setspace}
 
 \graphicspath{{figures/}}
 \columnsep=100pt
@@ -32,8 +33,8 @@
 \definecolor{DarkGrey}{cmyk}{0.35,0.28,0.29,0}
 \definecolor{Black}{cmyk}{0,0,0,1}
 
-\titleformat*{\section}{\sffamily\Large\bfseries\color{EMBLBlue}}
-\titleformat*{\subsection}{\sffamily\large\bfseries\color{EMBLGreen}}
+\titleformat*{\section}{\sffamily\Huge\bfseries\color{EMBLBlue}}
+\titleformat*{\subsection}{\sffamily\Large\bfseries\color{EMBLGreen}}
 \titleformat*{\subsubsection}{\sffamily\normalsize\bfseries\color{DarkGrey}}
 
 \titleformat*{\paragraph}{\normalfont\normalsize\bfseries\color{black}}
