--- a/poster.tex
+++ b/poster.tex
@@ -6,13 +6,16 @@
 \begin{document}
 \sffamily
 
-\begin{minipage}[][][t]{0.88\textwidth}
+\noindent
+\begin{minipage}[][8cm][t]{0.88\textwidth}
     {
-        \veryHuge\color{EMBLBlue}\bfseries\sffamily%
+        \VeryHuge\color{EMBLBlue}\bfseries\sffamily%
         Codon–anticodon interactions in mammals do not adapt to changes in
-        cellular function\hfill
+        cellular function
     }
     {
+        \\[\baselineskip]
+        \noindent
         \Large\color{Black}%
         \underline{Konrad L.\ M.\ Rudolph\textsuperscript{1}},
         Bianca M.\ Schmitt\textsuperscript{2},
@@ -26,23 +29,23 @@
     2. Co-author affiliation
 \end{minipage}%
 \hfill%
-\begin{minipage}[][][t]{0.1\textwidth}
-    \includegraphics[width=\textwidth]{portrait}
+\begin{minipage}[][8cm][t]{0.1\textwidth}
+    \raggedleft
+    \includegraphics[height=8cm]{portrait}
 \end{minipage}
 
-\vspace{1cm}
-\renewcommand\baselinestretch{1}
+\vspace{5cm}
+\Large
 
-\begin{multicols}{2}
-\large
-
-\section*{Introduction}
-\blindtext ~\citep{Reynolds2012a}
+\noindent
+\begin{minipage}[t]{0.45\textwidth}
+    \section*{Introduction}
+    \blindtext
+\end{minipage}
 
 \small
 \begin{multicols}{2}
     \bibliography{sample.bib}
-\end{multicols}
 \end{multicols}
 
 \vfill
