--- a/poster.tex
+++ b/poster.tex
@@ -36,8 +36,22 @@
 \noindent
 \begin{minipage}[t][][t]{0.45\textwidth}
     \section*{Introduction}
-    \blindtext
-    \citep{Schmitt:2014}, \citep{Gingold:2014}
+    We have previously reported the stability of the codon--anticodon interface
+    during mouse development, where we measured the whole-transcriptome codon
+    usage and the tRNA anticodon abundance of matching stages of development and
+    found remarkable stability, both in codon usage and in tRNA anticodon
+    abundance, despite the drastic phenotypic changes \citep{Schmitt:2014}.
+    These findings let us to hypothesise that, unlike in other organisms
+    \citep{Carlini:2003}, no widespread translational regulation, regulated by
+    codon bias, is likely to occur in mammals.
+
+    In contrast, others have recently reported that codon usage for genes
+    enriched in cell-autonomous function and multicelluarity in humans is
+    adapted to the tRNA abundance of proliferating and differentiating cells,
+    respectively \citep{Gingold:2014}.
+
+    Here we test this hypothesis using whole-genome expression data from healthy
+    liver tissue and two different tumour cell lines in human and mouse.
 \end{minipage}%
 \hfill%
 \begin{minipage}[t][][t]{0.5\textwidth}
