--- a/poster.tex
+++ b/poster.tex
@@ -34,7 +34,7 @@
 \Large
 
 \noindent
-\begin{minipage}[t][][t]{0.45\textwidth}
+\begin{minipage}[t][][t]{0.48\textwidth}
     \section*{Introduction}
     We have previously reported the stability of the codon--anticodon interface
     during mouse development, where we measured the whole-transcriptome codon
@@ -54,27 +54,28 @@
     liver tissue and two different tumour cell lines in human and mouse.
 \end{minipage}%
 \hfill%
-\begin{minipage}[t][][t]{0.5\textwidth}
-    \section*{Codon usage bias correlates with gene set size}
-    \includegraphics[width=\textwidth]{gene-set-size}
+\begin{minipage}[t][][t]{0.48\textwidth}
+    \section*{Experimental setup}
+    \includegraphics[width=\textwidth]{experimental-design}
+    \\[1cm]
+    Codon usage and Anticodon abundance of healthy adult liver and two
+    cancer cell lines were correlated to estimate their adaptation in each
+    cellular condition. Higher correlation implies better adaptation of the
+    codon usage to the anticodon abundance.
+
+    The GO terms for cell-specific functions are “pattern specification
+    process” and “M phase of mitotic cell cycle” for healthy and tumour
+    cells, respectively.
 \end{minipage}
 
+\noindent
 \begin{minipage}[][][t]{\textwidth}
-    \section*{Experimental setup}
-    \begin{minipage}[c]{0.50\textwidth}
-        \includegraphics[width=\textwidth]{experimental-design}
-        \\[1cm]
-        Codon usage and Anticodon abundance of healthy adult liver and two
-        cancer cell lines were correlated to estimate their adaptation in each
-        cellular condition. Higher correlation implies better adaptation of the
-        codon usage to the anticodon abundance.
-
-        The GO terms for cell-specific functions are “pattern specification
-        process” and “M phase of mitotic cell cycle” for healthy and tumour
-        cells, respectively.
+    \begin{minipage}[c]{0.48\textwidth}
+        \section*{Codon usage bias correlates with gene set size}
+        \includegraphics[width=\textwidth]{gene-set-size}
     \end{minipage}%
     \hfill
-    \begin{minipage}{0.20\textwidth}
+    \begin{minipage}{0.23\textwidth}
         \centering
         \textbf{Legend:}\\[0.5cm]
         \includegraphics[width=\textwidth]{legend-1}
@@ -82,13 +83,14 @@
         \includegraphics[width=\textwidth]{legend-2}
     \end{minipage}%
     \hfill
-    \begin{minipage}{0.20\textwidth}
+    \begin{minipage}{0.17\textwidth}
         \centering
         \includegraphics[height=15cm]{interaction-schema}
     \end{minipage}%
 \end{minipage}
 
-\vspace{2cm}
+\vspace{1cm}
+\noindent
 \begin{minipage}{\textwidth}
     \begin{minipage}[t]{0.48\textwidth}
         \section*{Results}
@@ -97,7 +99,7 @@
     \hfill%
     \begin{minipage}[t][][t]{0.48\textwidth}
         \LARGE
-        \section*{Tumour cell types show no evidence of codon--anticodon coordination}
+        \section*{Tumour cell lines show no evidence of codon--anticodon coordination}
         Codon--anticodon correlation is not significantly higher in matching
         than in mismatching cellular condition. The same is true in genes in
         condition-specific gene sets (determined either via differential
@@ -107,11 +109,10 @@
         (\(N<100\) in all cases) on codon bias.
 
         \vspace{7cm}
-        \hfill Contact: rudolph@ebi.ac.uk, \textbf{@klmr}
+        \hfill Contact: \textbf{rudolph@ebi.ac.uk}, \textbf{@klmr}
     \end{minipage}%
 \end{minipage}
 
-\vspace{2cm}
 \section*{References}
 \vspace{-1cm}
 \begin{multicols}{2}
