Typo in section title

--- a/poster.tex
+++ b/poster.tex
@@ -90,7 +90,7 @@ liver tissue and two different tumour cell lines in human and mouse.
 \end{minipage}%
 \hfill
 \begin{minipage}[t][][t]{0.48\textwidth}
-    \section*{No evidence of codon--anticodon correlation}
+    \section*{No evidence of codon--anticodon adaptation}
     \includegraphics[width=\textwidth]{results}
 \end{minipage}%
 
