--- a/poster.tex
+++ b/poster.tex
@@ -12,8 +12,8 @@
 \begin{minipage}[][10cm][t]{0.88\textwidth}
     {
         \VeryHuge\color{accent}\bfseries\sffamily%
-        Codon–anticodon interactions in mammals do not adapt to changes in
-        cellular function
+        Using cancer to investigate the interaction between\\[0.1cm]
+        codon usage and tRNA anticodon abundance
     }
     {
         \\[\baselineskip]
